Fixed Layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ body {
 }
 
 .page-content {
+  width: 100%;
   height: 87.5vh;
   position: relative;
   left: 50%;
